OG images, descriptions

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,6 +2,8 @@
 type: posts
 title: Home
 date: 2024-04-24
+description: Hey 👋 I'm Nick! I'm sharing my experiences as a software developer, and things I learn along the way. Currently, my work is focused on Cloudflare, Solid, and Yjs
+image: /image/home.png
 ---
 
 ## Hey 👋🏻 I'm Nick.
