--- a/pages/posts/store-yjs-doc.mdx
+++ b/pages/posts/store-yjs-doc.mdx
@@ -5,6 +5,7 @@ title: How to store a Yjs doc
 date: 2024-04-26
 tag: yjs
 image: /image/posts/store-yjs-doc.png
+description: Learn the ins and outs of storing a Yjs doc in an S3 bucket or database.
 ---
 
 Yjs is a high-performance CRDT for building collaborative applications that sync automatically.
