publish electron post

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -4,23 +4,45 @@ title: About
 date: 2024-04-23
 ---
 
-import Link from "next/link";
-import { PostItem } from "@/components/post-item";
+import Link from 'next/link'
+import { PostItem } from '@/components/post-item'
 
 ## Hey 👋🏻 I'm Nick.
 
-I've worked for a few companies using a variety of programming languages and frameworks, learning a little from each as I go.
+As a founding engineer at Stashpad, I've had the opportunity to build a variety of systems and APIs from scratch, and troubleshoot interesting bugs that emerged while scaling from hundreds to thousands of users. I've worked directly with our customers to understand their needs, and build new features from end-to-end in conjunction with them. I really enjoy finding and optimizing slow code paths, and have come to love the Chrome debugger.
+
+In my spare time, I've started working on a compiler for a new programming language called [torch](https://github.com/nickbeaulieu/torch) which I'm implementing in Typescript, and compiling to C. The project is still very much a prototype, but torch is already turing-complete!
 
 ---
 
-## Stashpad
+## Stashpad (2022 - current)
 
-adsf
+Senior Software Engineer (Founding Team)
 
-## Levitate
+- Designed and implemented a database and API with MySQL and Cloudflare Workers, integrating billing, authentication, and permissions systems.
+- Built real-time syncing for a collaborative document editor using Cloudflare durable objects and Y.js over websockets.
+- Developed editor features including comments, suggestions, mentions, grammar checking, and autocomplete using Solid.js and Codemirror.
+- Automated a custom CI pipeline for building Electron apps on macOS, Windows, and Linux, used to release across multiple channels on a daily basis.
+- Implemented a tree-style drag & drop library in React for document and note organization across workspaces.
+- Optimized MongoDB Realm database operations using indexes and aggregations for instantaneous local-first interactions.
 
-adfa
+## Levitate (2020 - 2022)
 
-## Caterpillar (CAT)
+Senior Software Engineer
 
-adsf
+- Architected and developed the texting platform, while responsible for establishing the database models, background job processing, business logic, and guiding other developers on front-end interface implementation.
+- Optimized background job processing for contacts and integrations with external REST APIs using C# and MongoDB.
+- Led the frontend development of a gamified sales tool which had an integrated phone dialing interface, and daily leaderboards for sales reps.
+
+Software Engineer II
+
+- Built a calendar and scheduling tool that integrates with GMail and Outlook for personalized email campaigns, using React and C#.
+- Developed contact search and tagging tools, and improved navigation for a mobile app using React Native.
+- Transformed the admin dashboard, improving revenue and retention tracking, leading to clearer data-driven decisions.
+
+## Caterpillar (2018 - 2020)
+
+Design Engineer
+
+- Designed and built a React component library that accepts user input from a touchscreen and jog dial.
+- Implemented features on the console display from end-to-end including AM/FM radio, bluetooth, backup camera, and cruise control using C, C++ and JS.
