--- a/pages/posts/store-yjs-doc.mdx
+++ b/pages/posts/store-yjs-doc.mdx
@@ -1,7 +1,7 @@
 ---
 type: post
 author: Nick Beaulieu
-title: How to store a Yjs doc
+title: Storing a Yjs doc
 date: 2024-04-26
 tag: yjs
 image: /image/posts/store-yjs-doc.png
