--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,7 +2,7 @@
 type: posts
 title: Home
 date: 2024-04-24
-description: Hey 👋 I'm Nick! I'm sharing my experiences as a software developer, and things I learn along the way. Currently, my work is focused on Cloudflare, Solid, and Yjs
+description: Hey 👋 I'm Nick! I'm sharing my experiences as a software developer, and things I learn along the way. Currently, my work is focused on Cloudflare, Solid, and Yjs.
 image: /image/home.png
 ---
 
