--- a/pages/prismatic.mdx
+++ b/pages/prismatic.mdx
@@ -10,39 +10,41 @@ import Link from 'next/link'
 
 Here are some quick links to my cover letter and resume!
 
-<div className="flex items-center">
+<div className="flex items-center gap-1">
+  Cover letter:
   <Link
     href="/docs/Nick-Beaulieu-Senior-Software-Engineer-at-Prismatic-Cover-Light.pdf"
     target="_blank"
     rel="noopener noreferrer"
   >
-    Cover letter
+    light mode
   </Link>
-  &nbsp;
+  or
   <Link
     href="/docs/Nick-Beaulieu-Senior-Software-Engineer-at-Prismatic-Cover-Dark.pdf"
     target="_blank"
     rel="noopener noreferrer"
   >
-    (dark mode)
+    dark mode
   </Link>
 </div>
 
-<div className="flex items-center">
+<div className="flex items-center gap-1">
+  Resume:
   <Link
     href="/docs/Nick-Beaulieu-Senior-Software-Engineer-Resume.pdf"
     target="_blank"
     rel="noopener noreferrer"
   >
-    Resume
+    light mode
   </Link>
-  &nbsp;
+  or
   <Link
     href="/docs/Nick-Beaulieu-Senior-Software-Engineer-Resume-Dark.pdf"
     target="_blank"
     rel="noopener noreferrer"
   >
-    (dark mode)
+    dark mode
   </Link>
 </div>
 
