--- a/pages/stytch.mdx
+++ b/pages/stytch.mdx
@@ -1,19 +1,19 @@
 ---
-title: Prismatic | Senior Software Engineer for SDKs
+title: Stytch | Experienced Full-Stack Engineer - Web
 date: 2024-07-19
 draft: true
 ---
 
 import Link from 'next/link'
 
-## Hey Prismatic!
+## Hey Stytch!
 
 Here are some quick links to my cover letter and resume!
 
 <div className="flex items-center gap-1">
   Cover letter:
   <Link
-    href="/docs/Nick-Beaulieu-Senior-Software-Engineer-at-Prismatic-Cover-Light.pdf"
+    href="/docs/Nick-Beaulieu-Experienced-Full-Stack-Engineer-At-Stytch-Light.pdf"
     target="_blank"
     rel="noopener noreferrer"
   >
@@ -21,7 +21,7 @@ Here are some quick links to my cover letter and resume!
   </Link>
   or
   <Link
-    href="/docs/Nick-Beaulieu-Senior-Software-Engineer-at-Prismatic-Cover-Dark.pdf"
+    href="/docs/Nick-Beaulieu-Experienced-Full-Stack-Engineer-At-Stytch-Dark.pdf"
     target="_blank"
     rel="noopener noreferrer"
   >
@@ -50,22 +50,20 @@ Here are some quick links to my cover letter and resume!
 
 ## Intro
 
-Hey Tanner and Bryan,
+Hey Stytch Team!,
 
-I wanted to take this opportunity to introduce myself in a little less formal way than the cover letter that I sent in with my application. I came across your job posting on LinkedIn, and it really caught my eye. Being able to work on tools for other developers excites me, and I am sure that I can make a big impact at Prismatic as you all are preparing to scale up with your Series B funding.
+I wanted to take this opportunity to introduce myself in a little less formal way than the cover letter that I sent in with my application. I noticed that you were hiring on LinkedIn, and it really caught my eye. I've enjoyed being a Stytch customer, and interacting with Nicole, Matt, and Chris in your Slack channel. Being able to work on tools for other developers excites me, and I am sure that I can make a big impact at Stytch as you all are continuing to scale up with your Series B funding.
 
 A little more about me...
 
 I've been a full stack engineer for about 6 years now. In my current role as an engineer on the founding team at [Stashpad](https://stashpad.com), I've had the opportunity to work on docs and writing tools crafted specifically for developers and other technical folks. I thoroughly enjoyed building our Slack integration at Stashpad, and have worked on a few smaller integrations here as well. I also set up our public API, which can be used to create, search, and update documents - and is the base for most of our integrations.
 
-In my last role at [Levitate](https://www.levitate.ai/), I worked on a variety of integrations - both direct email integrations to GMail and Outlook, and contact/data integrations like HubSpot. While I was at Levitate I also led the development of the texting platform, which we integrated with Bandwidth (similar to Twilio) to achieve. I have had plenty of experience working with external platforms, and I'm really interested in the Prismatic approach to solving that problem.
+In my last role at [Levitate](https://www.levitate.ai/), I worked on a variety of integrations - both direct email integrations to GMail and Outlook, and contact/data integrations like HubSpot. While I was at Levitate I also led the development of the texting platform, which we integrated with Bandwidth (similar to Twilio) to achieve. I have had plenty of experience working with external platforms, and I'm really excited to bring what I've learned to the Stytch team.
 
 In my spare time, I've started working on a compiler for a new programming language called [torch](https://github.com/nickbeaulieu/torch) which I'm implementing in Typescript (and building with Bun!), and compiling to C. The project is still very much a prototype, but torch is already turing-complete! Writing a new language opens up so many DX things to think about, and I'm really enjoying the process. I'm shooting for a systems programming language that feels closer to Typescript while you're writing it, but compiles to run as fast as possible. I want it to be great for writing http servers, with little memory overhead.
 
-On a more personal note, I'm getting married this fall, and am really excited to be starting a new phase of life with my fiance Rebecca. We both love to cook, and my favorite dish to make from scratch is a beef bolognese. Tanner - I see that you're into BBQ, which I don't know too much about but I'd love to chat with you about.
+On a more personal note, I'm getting married this fall, and am really excited to be starting a new phase of life with my fiance Rebecca. We both love to cook, and my favorite dish to make from scratch is a beef bolognese. We also just got back from a trip to Glacier and Yellowstone. We did quite a bit of hiking, and I loved seeing the geysers.
 
-We also just got back from a trip to Glacier and Yellowstone. We did quite a bit of hiking, and I loved seeing the geysers. Bryan - it looks like you're not too far from that part of the country being in South Dakota. I'm curious to know if you've been to either of those parks!
-
-I'd love to chat with both of you to learn more about Prismatic, and share more about my experience and what I'll bring to the table joining the team.
+I'd love to chat with you to learn more about Stytch, and share more about my experience and what I'll bring to the table joining the team.
 
 Thank you for your time, and I look forward to speaking with you soon.
