--- a/pages/stytch.mdx
+++ b/pages/stytch.mdx
@@ -50,7 +50,7 @@ Here are some quick links to my cover letter and resume!
 
 ## Intro
 
-Hey Stytch Team!,
+Hey Stytch Team!
 
 I wanted to take this opportunity to introduce myself in a little less formal way than the cover letter that I included above. I noticed that you were hiring on LinkedIn, and it really caught my eye. I've enjoyed being a Stytch customer, and interacting with Nicole, Matt, and Chris in your Slack channel. Being able to work on tools for other developers excites me, and I am sure that I can make a big impact at Stytch as you all are continuing to scale up with your Series B funding.
 
