--- a/pages/textla.mdx
+++ b/pages/textla.mdx
@@ -37,7 +37,7 @@ I wanted to take this opportunity to introduce myself. I noticed that you were h
 
 A little more about me...
 
-I've been a full stack engineer for about 6 years now. In my current role as an engineer on the founding team at Stashpad, I've had the opportunity to work on docs and writing tools crafted specifically for developers and other technical folks. I thoroughly enjoyed building our Slack integration at Stashpad, and have worked on a few smaller integrations here as well. I have direct experience with most of the tech stack you guys use (Next.js, React, Tailwind, Typescript), and have set up an API from scratch using the Cloudflare equivalents (Workers, D1, R2, Queues, etc.) of the AWS tools you use.
+I've been a full stack engineer for about 6 years now. In my current role as an engineer on the founding team at Stashpad, I've had the opportunity to work on docs and writing tools crafted specifically for developers and other technical folks. I thoroughly enjoyed building our Slack integration at Stashpad, and have worked on a few smaller integrations here as well. I have direct experience with most of the tech stack you guys use (Next.js, React, Tailwind, Typescript), and have set up an API from scratch using the Cloudflare equivalents (Workers, D1, R2, Queues, etc.) of the AWS tools you use. I regularly meet with customers, and work closely with our designer to tweak the interface, and decide which new features we build.
 
 In my last role at Levitate, I led the development of the texting platform, which we integrated with Bandwidth for. I designed the database models (MongoDB), and wrote all of the background jobs & business logic (in C#) for conversations and messages. I also guided two front-end devs on building the interface our customers interacted with.
 
