--- a/pages/textla.mdx
+++ b/pages/textla.mdx
@@ -31,7 +31,7 @@ Here is a quick link to my resume!
 
 ## Intro
 
-Hey Luke,
+Hey Luke & Jeremy,
 
 I wanted to take this opportunity to introduce myself. I noticed that you were hiring on LinkedIn, and it really caught my eye as I'm looking for a role as a Senior Software Engineer. I am currently on the founding team of [Stashpad](https://stashpad.com), which is unfortunately shutting down. I have gotten a ton of experience setting up new systems and APIs from scratch, and in my last job led the development of the texting platform at [Levitate](https://levitate.ai). My experience aligns closely with what you're searching for and I know I can help scale Textla up to the next level.
 
